--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <!-- 인덕션 카드 -->            
 <div class="col-md-4">
     <div class="card">
-        <img src="인덕션.jpg" class="card-img-top" alt="인덕션 이미지" />
+        <img src="인덕션.png" class="card-img-top" alt="인덕션 이미지" />
         <div class="card-body">
             <h5 class="card-title">인덕션</h5>
             <h6 class="card-subtitle mb-2 text-muted">200만원</h6>
