--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <h6 class="card-subtitle mb-2 text-muted">200만원</h6>
             <p class="card-text">
                 2023년 모델의 인덕션 판매합니다
-            <a href="https://spartacodingclub.kr/" class="btn btn-primary" target="_blank"
+            <a href="https://blog.naver.com/hero_ok" class="btn btn-primary" target="_blank"
                 rel="noopener noreferrer">
                 상세 정보 보기
             </a>
@@ -77,7 +77,7 @@
             <h6 class="card-subtitle mb-2 text-muted">100만원</h6>
             <p class="card-text">
                 2023년 모델의 정수기 판매합니다.
-            <a href="https://spartacodingclub.kr/" class="btn btn-primary" target="_blank"
+            <a href="https://blog.naver.com/hero_ok" class="btn btn-primary" target="_blank"
                 rel="noopener noreferrer">
                 상세 정보 보기
             </a>
@@ -93,7 +93,7 @@
                         <h6 class="card-subtitle mb-2 text-muted">120만원</h6>
                         <p class="card-text">
                             2023년 모델의 안마의자 판매합니다.
-                        <a href="https://spartacodingclub.kr/" class="btn btn-primary" target="_blank"
+                        <a href="https://blog.naver.com/hero_ok/" class="btn btn-primary" target="_blank"
                             rel="noopener noreferrer">
                             상세 정보 보기
                                     
